Closed Bug 1263657 Opened 8 years ago Closed 8 years ago

Fix WindowsDllBlocklist.cpp if MOZ_MEMORY is not defined.

Categories

(Core :: mozglue, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: jacek, Assigned: jacek)

Details

Attachments

(1 file)

Attached patch patch.diffSplinter Review
That's the case in mingw builds.
Attachment #8740026 - Flags: review?(mh+mozilla)
Attachment #8740026 - Flags: review?(mh+mozilla) → review+
https://hg.mozilla.org/mozilla-central/rev/13bb9febca01
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: