Bug 1263657 - Fixed WindowsDllBlocklist.cpp if MOZ_MEMORY is not defined. r=glandium